@@ -5,7 +5,10 @@ import ggxnet.reload.controller.command.EnterCommand;
 import ggxnet.reload.controller.command.PlayerConfigCommand;
 import ggxnet.reload.controller.command.PlayerIdCommand;
 import ggxnet.reload.repository.PlayerConfigRepository;
+import ggxnet.reload.repository.PlayerRepository;
+import ggxnet.reload.repository.PlayerStatRepository;
 import ggxnet.reload.repository.entity.PlayerConfigEntity;
+import ggxnet.reload.repository.entity.PlayerEntity;
 import ggxnet.reload.repository.entity.PlayerStatsEntity;
 import ggxnet.reload.service.dto.PlayerConfigDto;
 import lombok.extern.slf4j.Slf4j;
@@ -13,79 +16,78 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
 @Slf4j
 @Service
 public class PlayerService {
   private final PlayerConfigRepository playerConfigRepository;
+  private final PlayerStatRepository playerStatRepository;
+  private final PlayerRepository playerRepository;
 
-  public PlayerService(PlayerConfigRepository playerConfigRepository) {
+  public PlayerService(PlayerConfigRepository playerConfigRepository, PlayerStatRepository playerStatRepository,
+      PlayerRepository playerRepository) {
     this.playerConfigRepository = playerConfigRepository;
+    this.playerStatRepository = playerStatRepository;
+    this.playerRepository = playerRepository;
   }
 
   public String read(PlayerIdCommand command) {
     StringBuilder playersToString = new StringBuilder();
-    List<PlayerConfigEntity> playersConfig =
-        playerConfigRepository.findAll().stream()
-            .filter(playerConfigEntity -> !playerConfigEntity.getId().equals(command.getPlayerId()))
-            .filter(PlayerConfigEntity::isActive)
-            .collect(Collectors.toList());
-    for (PlayerConfigEntity playerConfigEntity : playersConfig) {
-      playersToString.append(playerConfigEntity.parseToString());
+    List<PlayerEntity> players =
+        playerRepository.findAll().stream()
+            .filter(playerEntity -> !playerEntity.getId().equals(command.getPlayerId()))
+            .filter(playerEntity -> playerEntity.getConfig().isActive())
+            .toList();
+    for (PlayerEntity playerEntity : players) {
+      playersToString.append(playerEntity.getConfig().parseToString(playerEntity.getStats()));
     }
     return playersToString.toString();
   }
 
   public EnterResponse enter(EnterCommand command) {
-    PlayerConfigEntity playerConfigEntity = playerConfigRepository.findById(command.getPlayerId()).orElseThrow();
+    PlayerConfigEntity playerConfigEntity = playerConfigRepository.findByPlayerId(command.getPlayerId()).orElseThrow();
     playerConfigEntity.activatePlayer(command.getPort());
     playerConfigRepository.save(playerConfigEntity);
     log.info("Player: {} entered the lobby", playerConfigEntity.getUserName());
-    return new EnterResponse(playerConfigEntity.getScriptAddress(),playerConfigEntity.getPort());
-//    return playerConfigEntity
-//        .getScriptAddress()
-//        .concat(":")
-//        .concat(String.valueOf(playerConfigEntity.getPort()));
+    return new EnterResponse(playerConfigEntity.getScriptAddress(), playerConfigEntity.getPort());
   }
 
   public void leave(PlayerIdCommand command) {
     PlayerConfigEntity playerConfigEntity =
-        playerConfigRepository.findById(command.getPlayerId()).orElseThrow();
+        playerConfigRepository.findByPlayerId(command.getPlayerId()).orElseThrow();
     playerConfigEntity.deactivate();
     playerConfigRepository.save(playerConfigEntity);
   }
 
   public void createConfig(PlayerConfigCommand command) {
-    PlayerStatsEntity playerStatsEntity = PlayerStatsEntity.of();
+    // PlayerStatsEntity playerStatsEntity = PlayerStatsEntity.of();
     String playerConfigId = UUID.randomUUID().toString();
-    PlayerConfigEntity playerConfig =
-        PlayerConfigEntity.of(playerConfigId, command, playerStatsEntity);
+    PlayerConfigEntity playerConfig = PlayerConfigEntity.of(playerConfigId, command);
     playerConfigRepository.save(playerConfig);
   }
 
   public PlayerConfigDto getPlayerConfig(String playerId) {
-    PlayerConfigEntity playerConfigEntity = playerConfigRepository.findById(playerId).orElseThrow();
-    return PlayerConfigDto.of(playerConfigEntity);
+    PlayerConfigEntity playerConfigEntity = playerConfigRepository.findByPlayerId(playerId).orElseThrow();
+    PlayerStatsEntity playerStatsEntity = playerStatRepository.findByPlayerId(playerId).orElseThrow();
+
+    return PlayerConfigDto.of(playerConfigEntity, playerStatsEntity);
   }
 
   public void addWin(String playerId) {
-    PlayerConfigEntity playerConfigEntity =
-        playerConfigRepository.findById(playerId).orElseThrow();
-    playerConfigEntity.getStats().addWin();
-    playerConfigRepository.save(playerConfigEntity);
+    PlayerStatsEntity playerStatsEntity = playerStatRepository.findByPlayerId(playerId).orElseThrow();
+    playerStatsEntity.addWin();
+    playerStatRepository.save(playerStatsEntity);
   }
 
   public void addLose(String playerId) {
-    PlayerConfigEntity playerConfigEntity =
-        playerConfigRepository.findById(playerId).orElseThrow();
-    playerConfigEntity.getStats().addLose();
-    playerConfigRepository.save(playerConfigEntity);
+    PlayerStatsEntity playerStatsEntity = playerStatRepository.findByPlayerId(playerId).orElseThrow();
+    playerStatsEntity.addLose();
+    playerStatRepository.save(playerStatsEntity);
   }
 
   public void addDraw(String playerId) {
-    PlayerConfigEntity playerConfigEntity =
-        playerConfigRepository.findById(playerId).orElseThrow();
-    playerConfigEntity.getStats().addDraw();
-    playerConfigRepository.save(playerConfigEntity);
+    PlayerStatsEntity playerStatsEntity = playerStatRepository.findByPlayerId(playerId).orElseThrow();
+    playerStatsEntity.addDraw();
+    playerStatRepository.save(playerStatsEntity);
   }
 }
